fix: read FORBIDDEN response as Error in teacher role-matrix tests